--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -1,4 +1,9 @@
 {
+  "header": {
+    "login": "Σύνδεση",
+    "greek": "Ελληνικά",
+    "english": "English"
+  },
   "home": {
     "title": "Αρχική σελίδα"
   },
