modal login creation

--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -11,5 +11,10 @@
     "homepage": "Αρχική σελίδα",
     "comingsoon": "Προσεχώς",
     "playingNow": "Παιζονταί τώρα"
+  },
+  "login": {
+    "title": "Σύνδεθείτε",
+    "username": "Όνομα χρήστη",
+    "password": "Κωδικός χρήστη"
   }
 }
