--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -5,7 +5,8 @@
     "english": "English"
   },
   "home": {
-    "title": "Αρχική σελίδα"
+    "title": "Αρχική σελίδα",
+    "recommend": "Προτεινόμενα"
   },
   "sidebar": {
     "homepage": "Αρχική σελίδα",
