--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -15,7 +15,7 @@
     "homepage": "Αρχική σελίδα",
     "playingNow": "Παιζονταί τώρα",
     "contact": "Επικοινωνία",
-    "comingsoon": "Προσεχώς"
+    "comingSoon": "Προσεχώς"
   },
   "login": {
     "title": "Σύνδεθείτε",
