Added contact page
added contact page and 2 new colors

--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -21,5 +21,13 @@
     "title": "Σύνδεθείτε",
     "username": "Όνομα χρήστη",
     "password": "Κωδικός χρήστη"
+  },
+  "contact": {
+    "title":"Επικοινωνήστε μαζί μας",
+    "name": "Όνομα",
+    "surname" : "Επίθετο",
+    "email": "Email",
+    "message": "Μήνυμα",
+    "submit": "Αποστολή"
   }
 }
