--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -15,5 +15,13 @@
     "comingSoon": "Coming Soon",
     "playingNow": "Playing Now",
     "contact": "Contact"
+  },  
+  "contact": {
+    "title":"Contact Us",
+    "name": "Name",
+    "surname" : "Surname",
+    "email": "Email",
+    "message": "Message",
+    "submit" : "Submit"
   }
 }
