--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -53,7 +53,9 @@
   },
   "movieAdmin": {
     "title": "Διαχείριση ταινιών",
-    "addNew": "Προσθήκη"
+    "addNew": "Προσθήκη",
+    "edit": "Επεξεργασία",
+    "cancel": "Ακύρωση"
   },
   "movieEdit": {
     "title": "Προσθήκη ταινίας",
@@ -67,5 +69,6 @@
     "rating": "Κριτική",
     "inactive": "Διαθέσιμη",
     "selectFile": "Επιλογή εικόνας"
+
   }
 }
