user admin give roles and delete users

--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -51,6 +51,14 @@
     "actors": "Ηθοποιοί",
     "reserve": "Κράτηση"
   },
+  "admin": {
+    "movies": "Διαχείριση ταινιών",
+    "users": "Διαχείριση χρηστών"
+  },
+  "usersAdmin": {
+    "title": "Διαχείριση χρηστών",
+    "edit": "Αποθήκευση"
+  },
   "movieAdmin": {
     "title": "Διαχείριση ταινιών",
     "addNew": "Προσθήκη",
