προσθήκη alert μηνυμάτων

--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -77,6 +77,32 @@
     "rating": "Κριτική",
     "inactive": "Διαθέσιμη",
     "selectFile": "Επιλογή εικόνας"
-
+  },
+  "alert": {
+    "invalidForm": "Τα στοιχεία της φόρμας δεν έχουν συμπληρωθεί σωστά.",
+    "deleteQuestion": "Διαγραφή;",
+    "warning": "Προσοχή",
+    "success": "Επιτυχία",
+    "ok": "Οκ",
+    "confirm": "Επιβεβαίωση",
+    "cancel": "Ακύρωση",
+    "userDeleted": "Ο χρήστης διαγράφηκε με επιτυχία.",
+    "userDeletedError": "Αδυναμία διαγραφής χρήστη.",
+    "userUpdated": "Τα στοιχεία του χρήστη ενημερώθηκαν με επιτυχία.",
+    "userUpdatedError": "Αδυναμία ενημέρωσης στοιχείων χρήστη.",
+    "loginSuccess": "Επιτυχημένη σύνδεση.",
+    "loginError": "Αδυναμία επαλήθευσης των στοιχείων σας.",
+    "signSuccess": "Επιτυχημένη εγγραφή.",
+    "signError": "Αδυναμία εγγραφής σας στην εφαρμογή, παρακαλούμε ελέξτε ότι τα στοιχεία που προμηθεύσατε είναι έγκαιρα.",
+    "getUsersError": "Αδυναμία άντλησης χρηστών.",
+    "getMoviesError": "Αδυναμία άντλησης ταινιών.",
+    "uploadMovieSuccess": "Τα στοιχεία της ταινίας ανέβηκαν με επιτυχία.",
+    "uploadMovieError": "Αδυναμία αποθήκευσης των στοιχείων της ταινίας.",
+    "newReservationSuccess": "Η κρατησή σας αποθηκεύτηκε με επιτυχία.",
+    "newReservationError": "Αδυναμία αποθήκευσης της κρατησής σας.",
+    "reseservationError": "Αδυναμία άντλησης στοιχείων κρατήσεων.",
+    "auditoriumError": "Αδυναμία άντλησης αιθουσών.",
+    "screeningError": "Αδυναμία άντλησης προβολών.",
+    "deleteUserQuestion": "Είστε σίγουρος/η ότι επιθυμείτε να διαγράψετε τον συγκεκριμένο χρήστη;"
   }
 }
