add new screenings

--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -16,7 +16,8 @@
     "playingNow": "Παίζονται τώρα",
     "contact": "Επικοινωνία",
     "comingSoon": "Προσεχώς",
-    "admin": "Διαχειριστής"
+    "admin": "Διαχειριστής",
+    "screening": "Προβολές"
   },
   "login": {
     "title": "Σύνδεθείτε / Εγγραφείτε",
@@ -104,5 +105,9 @@
     "auditoriumError": "Αδυναμία άντλησης αιθουσών.",
     "screeningError": "Αδυναμία άντλησης προβολών.",
     "deleteUserQuestion": "Είστε σίγουρος/η ότι επιθυμείτε να διαγράψετε τον συγκεκριμένο χρήστη;"
+  },
+  "screeningAdmin": {
+    "title": "Διαχείριση Προβολών"
+
   }
 }
