--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -108,7 +108,12 @@
     "reseservationError": "Αδυναμία άντλησης στοιχείων κρατήσεων.",
     "auditoriumError": "Αδυναμία άντλησης αιθουσών.",
     "screeningError": "Αδυναμία άντλησης προβολών.",
-    "deleteUserQuestion": "Είστε σίγουρος/η ότι επιθυμείτε να διαγράψετε τον συγκεκριμένο χρήστη;"
+    "deleteUserQuestion": "Είστε σίγουρος/η ότι επιθυμείτε να διαγράψετε τον συγκεκριμένο χρήστη;",
+    "deleteSpecificReservation": "Είστε σίγουρος/η ότι επιθυμείτε να ακυρώσετε την συγκεκριμένη κράτηση;",
+    "loginToConfirnReservation": "Δεν είστε συνδεδεμένος/η. Θέλετε να συνδεθείτε για να συνεχίσετε με την κρατήση σας;",
+    "chooseAScreening": "Δεν έχετε επιλέξει προβολή. Επιλέξτε μία προβολή για να συνεχίσετε.",
+    "chooseSeats": "Δεν έχετε επιλέξει θέσεις. Επιλέξτε τουλάχιστον μία θέση για να συνεχίσετε."
+
   },
   "screeningAdmin": {
     "title": "Διαχείριση Προβολών"
