Updated QR code and translations

--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -33,7 +33,8 @@
     "register": "Εγγραφή",
     "loginMsg": "Έχετε ήδη λογαριασμό; Συνδεθείτε",
     "googleLogin": "Σύνδεση με Google",
-    "facebookLogin": "Σύνδεση με Facebook"
+    "facebookLogin": "Σύνδεση με Facebook",
+    "logout" : "Αποσύνδεση"
   },
   "contact": {
     "title":"Επικοινωνήστε μαζί μας",
@@ -113,10 +114,30 @@
     "loginToConfirnReservation": "Δεν είστε συνδεδεμένος/η. Θέλετε να συνδεθείτε για να συνεχίσετε με την κρατήση σας;",
     "chooseAScreening": "Δεν έχετε επιλέξει προβολή. Επιλέξτε μία προβολή για να συνεχίσετε.",
     "chooseSeats": "Δεν έχετε επιλέξει θέσεις. Επιλέξτε τουλάχιστον μία θέση για να συνεχίσετε."
-
+  },
+  "screening" : {
+    "unavailable" : "Δεν υπάρχουν διαθέσιμες προβολές για την επιλεγμένη ημερομηνία.",
+    "reservation" : "Κράτηση",
+    "date" : "Ημερομηνία",
+    "seats" : "Θέσεις",
+    "movie" : "Ταινία"
   },
   "screeningAdmin": {
     "title": "Διαχείριση Προβολών"
-
+  },
+  "userProfile": {
+    "personalInfo" : "Προσωπικά στοιχεία",
+    "reservations" : "Κρατήσεις",
+    "name" : "Όνομα",
+    "surname" :"Επίθετο",
+    "phoneNumber" : "Τηλέφωνο"
+  },
+  "button": {
+    "submit" :"Αποστολή",
+    "save" :"Αποθήκευση"
+  },
+  "seatPicker" : {
+    "screen" : "ΟΘΟΝΗ",
+    "seats" : "Επιλεγμένες Θέσεις"
   }
 }
