--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -33,7 +33,8 @@
     "register": "Sign up",
     "loginMsg": "Already have an account? Login!",
     "googleLogin": "Login with Google",
-    "facebookLogin": "Login with Facebook"
+    "facebookLogin": "Login with Facebook",
+    "logout" : "Logout"
   },
   "contact": {
     "title":"Contact Us",
@@ -108,10 +109,35 @@
     "reseservationError": "Could not receive reservation info.",
     "auditoriumError": "Could not receive auditoriums.",
     "screeningError": "Could not receive screenings.",
-    "deleteUserQuestion": "Are you certain you want to delete this user?"
+    "deleteUserQuestion": "Are you certain you want to delete this user?",
+    "deleteSpecificReservation": "Are you certain you want to delete this reservation?",
+    "loginToConfirnReservation": "You are currently not logged in. Would you like to login to continue with your reservation?",
+    "chooseAScreening": "You have not selected a screening. Please select a screening to continue.",
+    "chooseSeats": "You have not selected seats. Please select a minimum of 1 seat to continue."
+  },
+  "screening" : {
+    "unavailable" : "There are no available screenings for this date.",
+    "reservation" : "Reservation",
+    "date" : "Date",
+    "seats" : "Seats",
+    "movie" : "Movie"
   },
   "screeningAdmin": {
     "title": "Manage Screenings"
-
+  },
+  "userProfile": {
+    "personalInfo" : "Personal info",
+    "reservations" : "Reservations",
+    "name" : "Name",
+    "surname" :"Surname",
+    "phoneNumber" : "Phone number"
+  },
+  "button": {
+    "submit" :"Submit",
+    "save" :"Save"
+  },
+  "seatPicker" : {
+    "screen" : "SCREEN",
+    "seats" : "Selected seats"
   }
 }
