last fixes and print translations

--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -85,6 +85,7 @@
     "selectFile": "Επιλογή εικόνας"
   },
   "alert": {
+    "question": "Ερώτηση",
     "invalidForm": "Τα στοιχεία της φόρμας δεν έχουν συμπληρωθεί σωστά.",
     "deleteQuestion": "Διαγραφή;",
     "warning": "Προσοχή",
@@ -120,10 +121,30 @@
     "reservation" : "Κράτηση",
     "date" : "Ημερομηνία",
     "seats" : "Θέσεις",
-    "movie" : "Ταινία"
+    "movie" : "Ταινία",
+    "bookTicket": "Έκδοση Εισιτηρίου",
+    "dateRoom": "Ημερομηνία / Αίθουσα",
+    "confirm": "Επιβεβαίωση",
+    "previous": "Προηγούμενο",
+    "next": "Επόμενο"
   },
   "screeningAdmin": {
-    "title": "Διαχείριση Προβολών"
+    "title": "Διαχείριση Προβολών",
+    "dateRange": "Εύρος ημερομηνιών",
+    "from": "Από",
+    "to": "Έως",
+    "movie": "Ταινία",
+    "movieName": "Όνομα ταινίας",
+    "viewing_dt": "Ημ/νία Προβολής",
+    "room": "Αίθουσα",
+    "reservations": "Κρατήσεις",
+    "noScreenings": "Δεν υπάρχει προβολή που να πληροί τα κριτήρια της αναζήτησης σας."
+  },
+  "createScreening": {
+    "selectDate": "Επιλογή Ημερομηνίας",
+    "selectHour": "Επιλογή Ώρα προβολής",
+    "selectRoom": "Επιλογή αίθουσας",
+    "selectMovie": "Επιλογή Ταινίας"
   },
   "userProfile": {
     "personalInfo" : "Προσωπικά στοιχεία",
@@ -139,5 +160,14 @@
   "seatPicker" : {
     "screen" : "ΟΘΟΝΗ",
     "seats" : "Επιλεγμένες Θέσεις"
+  },
+  "print": {
+    "room": " Αίθουσα ",
+    "thankyouMessage": "Ευχαριστούμε για την κράτηση σας.",
+    "infobelow": "Ακολουθούν οι πληροφορίες της κρατησής σας.",
+    "dateHour": "Ημερομηνία και Ώρα",
+    "movie": "Ταινία",
+    "seat": "Θέση",
+    "requiredAtEntrance": "Απαιτείται κατά την είσοδο σας."
   }
 }
