Added single movie deletion and fixed movie bug
Fixed a bug where clicking anywhere on a movie inside the admin menu would open the movie edit menu

--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -111,6 +111,7 @@
     "auditoriumError": "Αδυναμία άντλησης αιθουσών.",
     "screeningError": "Αδυναμία άντλησης προβολών.",
     "deleteUserQuestion": "Είστε σίγουρος/η ότι επιθυμείτε να διαγράψετε τον συγκεκριμένο χρήστη;",
+    "deleteMovieQuestion": "Είστε σίγουρος/η ότι επιθυμείτε να διαγράψετε τη συγκεκριμένη ταινια;",
     "deleteSpecificReservation": "Είστε σίγουρος/η ότι επιθυμείτε να ακυρώσετε την συγκεκριμένη κράτηση;",
     "loginToConfirnReservation": "Δεν είστε συνδεδεμένος/η. Θέλετε να συνδεθείτε για να συνεχίσετε με την κρατήση σας;",
     "chooseAScreening": "Δεν έχετε επιλέξει προβολή. Επιλέξτε μία προβολή για να συνεχίσετε.",
