--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -111,6 +111,7 @@
     "auditoriumError": "Could not receive auditoriums.",
     "screeningError": "Could not receive screenings.",
     "deleteUserQuestion": "Are you certain you want to delete this user?",
+    "deleteMovieQuestion": "Are you certain you want to delete this movie?",
     "deleteSpecificReservation": "Are you certain you want to delete this reservation?",
     "loginToConfirnReservation": "You are currently not logged in. Would you like to login to continue with your reservation?",
     "chooseAScreening": "You have not selected a screening. Please select a screening to continue.",
