--- a/frontend/src/assets/i18n/el.json
+++ b/frontend/src/assets/i18n/el.json
@@ -110,6 +110,7 @@
     "reseservationError": "Αδυναμία άντλησης στοιχείων κρατήσεων.",
     "auditoriumError": "Αδυναμία άντλησης αιθουσών.",
     "screeningError": "Αδυναμία άντλησης προβολών.",
+    "newScreeningSuccess" : "Η προβολή εισάχθηκε επιτυχώς",
     "deleteUserQuestion": "Είστε σίγουρος/η ότι επιθυμείτε να διαγράψετε τον συγκεκριμένο χρήστη;",
     "deleteMovieQuestion": "Είστε σίγουρος/η ότι επιθυμείτε να διαγράψετε τη συγκεκριμένη ταινια;",
     "deleteSpecificReservation": "Είστε σίγουρος/η ότι επιθυμείτε να ακυρώσετε την συγκεκριμένη κράτηση;",
@@ -156,7 +157,9 @@
   },
   "button": {
     "submit" :"Αποστολή",
-    "save" :"Αποθήκευση"
+    "save" :"Αποθήκευση",
+    "cancel" :"Ακύρωση"
+
   },
   "seatPicker" : {
     "screen" : "ΟΘΟΝΗ",
