--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -110,6 +110,7 @@
     "reseservationError": "Could not receive reservation info.",
     "auditoriumError": "Could not receive auditoriums.",
     "screeningError": "Could not receive screenings.",
+    "newScreeningSuccess" : "Screening was added successfully",
     "deleteUserQuestion": "Are you certain you want to delete this user?",
     "deleteMovieQuestion": "Are you certain you want to delete this movie?",
     "deleteSpecificReservation": "Are you certain you want to delete this reservation?",
@@ -156,7 +157,8 @@
   },
   "button": {
     "submit" :"Submit",
-    "save" :"Save"
+    "save" :"Save",
+    "cancel" :"Cancel"
   },
   "seatPicker" : {
     "screen" : "SCREEN",
